@@ -30,7 +30,7 @@ dd if=/dev/urandom of="$DM_DEV_DIR/$vg/thin" count=2 bs=256K
 lvcreate -s $vg/thin -n snap
 dd if=/dev/urandom of="$DM_DEV_DIR/$vg/snap" count=3 bs=256K
 
-lvs $vg
+lvs -o+discards $vg
 
 aux apitest thin_percent $vg
 
